# Ascend-msopgen

./: .gitignore  .gitmodules  README.md  build.py  dependencies.json  download_dependencies.py  requirements.txt  setup.py
docs/zh/: example.md  msopgen_install_guide.md  msopgen_quick_start.md  msopgen_user_guide.md  msopst_quick_start.md
docs/zh/best_practices/: example.md
docs/zh/contributing/: contributing_guide.md
docs/zh/development_guide/: architecture.md  develop_guide.md
docs/zh/install_guide/: msopgen_install_guide.md
docs/zh/legal/: security_statement.md  vulnerability_handling_procedure.md
docs/zh/quick_start/: msopgen_quick_start.md  msopst_quick_start.md
docs/zh/release_notes/: release_notes.md
docs/zh/user_guide/: msopgen_user_guide.md
msopgen/: msopgen.py
msopgen/config/: transform.json
msopgen/interface/: arg_parser.py  const_manager.py  op_file.py  op_file_aicore.py  op_file_aicpu.py  op_file_compile.py  op_file_generator.py  op_file_mindspore_aicore.py  op_file_mindspore_aicpu.py  op_file_vectorcore.py  op_info.py  op_info_ir.py  op_info_ir_json.py  op_info_ir_json_mindspore.py  op_info_ir_mindspore.py  op_info_parser.py  op_info_tf.py  op_info_tf_mindspore.py  op_tmpl.py  utils.py
msopgen/json_template/: IR_json.json
msopgen/simulator/: __init__.py  icache_dump_parser.py  icache_miss_record.py  instr_bean.py  instr_catagory.py  instr_dump_parser.py  instr_dump_record.py  instr_execution_record.py  instr_pop_dump_parser.py  instr_pop_dump_record.py  parse_dump.py  parse_first_pc.py  parse_objdump.py  reg_dump_parser.py  sim_const.py  sim_dump_parser.py  simulator.py  singleton.py  statistics.py  table_gen.py  trace.py  utils.py
msopgen/xlsx_template/: Ascend_IR_Template.xlsx
test/: run_test.py
test/test_msopgen/: setup.cfg
test/test_msopgen/op_kernel/: .cpp
test/test_msopgen/st/: test_msopgen_op_file_aicore.py  test_msopgen_st.py
test/test_msopgen/st/golden/golden_from_json/golden_output/framework/caffe_plugin/: CMakeLists.txt  caffe_conv2_d_plugin.cc
test/test_msopgen/st/golden/golden_from_json/golden_output/framework/tf_plugin/: CMakeLists.txt
test/test_msopgen/st/golden/golden_from_json/golden_output/op_proto/: CMakeLists.txt  conv2_d.h
test/test_msopgen/st/msopgen/golden/golden_from_json/golden_output_cpp/: CMakeLists.txt  CMakePresets.json  build.sh
test/test_msopgen/st/msopgen/golden/golden_from_json/golden_output_cpp/cmake/util/: insert_simplified_keys.py  opdesc_parser.py  replay_codegen.py  tiling_data_def_build.py
test/test_msopgen/st/msopgen/golden/golden_from_json/golden_output_cpp/framework/: CMakeLists.txt
test/test_msopgen/st/msopgen/golden/golden_from_json/golden_output_cpp/framework/tf_plugin/: CMakeLists.txt
test/test_msopgen/st/msopgen/golden/golden_from_json/golden_output_cpp/op_host/: CMakeLists.txt  conv2_d.cpp
test/test_msopgen/st/msopgen/golden/golden_from_json/golden_output_cpp/op_kernel/: CMakeLists.txt  conv2_d.cpp  conv2_d_tiling.h
test/test_msopgen/st/msopgen/golden/golden_from_ms_json/golden_output_aclnn_cpp/: CMakeLists.txt
test/test_msopgen/st/msopgen/golden/golden_from_ms_json/golden_output_aclnn_cpp/cmake/util/: const_var.py
test/test_msopgen/st/msopgen/simulator/: core0_icache_log.dump  core0_instr_log.dump  core2_reg_log.dump  dump2json_mixcore.json  dump_file.json
test/test_msopgen/st/res/: IR_excel.xlsx  IR_json.json  MS_json.json
test/test_msopgen/st/simulator/: code_exe_prof.csv  core0.veccore0.instr_log.dump  core0.veccore0.instr_popped_log.dump  core1_reg_log.dump  dump2json_core0.json  dump2json_core0_with_code.json  objdump_output.txt
test/test_msopgen/ut/: test_msopgen_op_file_aicore.py  test_msopgen_ut.py  test_msopgen_utils.py
test/test_msopgen/util/: test_utils.py
test/test_msopst/: setup.cfg
test/test_msopst/st/: test_mock_op_context.py  test_msopst_st.py  test_pytorch_model_parser.py
test/test_msopst/st/golden/base_case/golden_output/fuzz/Add/: CMakeLists.txt
test/test_msopst/st/golden/base_case/golden_output/fuzz/Add/inc/: common.h  op_execute.h  op_test.h  op_test_desc.h
test/test_msopst/st/golden/base_case/golden_output/fuzz/Add/src/: CMakeLists.txt  common.cpp  main.cpp  op_test.cpp  op_test_desc.cpp  testcase.cpp
test/test_msopst/st/res/tmp/: tmp_shape.json
test/test_msopst/ut/: test_acl_op_generator.py  test_acl_op_runner.py  test_case_generator.py  test_const_input.py  test_data_generator.py  test_fmk_tf_model_parser.py  test_model_parser.py  test_msopst_ut.py  test_msopst_util.py  test_pytorch_model_parser.py  test_subcase_design.py
test/test_msopst/util/: test_utils.py
tools/: MANIFEST.in  setup.py
tools/msopst/common/: __init__.py  ascend_tbe_op.py  data_generator.py  dtype_trans.py  file_util.py  logger.py  op_param_util.py  op_status.py  precision_compare_util.py  precision_info.py  register.py  shape_utils.py  soc_util.py  type_util.py
tools/msopst/config/: __init__.py  llt_config.py
tools/msopst/runtime/: __init__.py  rts_api.py  rts_info.py
tools/msopst/scripts/: msopst.ini  msopst.py
tools/msopst/st/config/: white_list_config.json
tools/msopst/st/interface/: acl_op_generator.py  acl_op_runner.py  advance_ini_parser.py  arg_parser.py  atc_transform_om.py  case_design.py  case_generator.py  compare_data.py  const_manager.py  data_generator.py  dynamic_handle.py  gen_ascendc_test.py  gen_template_test.py  global_config_parser.py  model_parser.py  ms_op_generator.py  ms_op_runner.py  op_st_case_info.py  pt_op_generator.py  result_comparer.py  st_report.py  subcase_design.py  subcase_design_cross.py  subcase_design_fuzz.py  utils.py
tools/msopst/st/interface/framework/: framework.json  pytorch_model_parser.py  tf_model_parser.py
tools/msopst/template/: ascendc_snippet.py  code_snippet.py
tools/msopst/template/acl_op_src/: CMakeLists.txt
tools/msopst/template/acl_op_src/inc/: common.h  op_runner.h  op_test_desc.h
tools/msopst/template/acl_op_src/src/: CMakeLists.txt  common.cpp  op_execute.cpp  op_runner.cpp  testcase.cpp
tools/msopst/template/ascendc_op_src/: CMakeLists.txt  data_utils.h  run.sh
(+133 files in other folders)
